--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ library(mirt)
 
 # `D3MIRT` Modeling
 
-The `D3mirt` analysis is based on descriptive multidimensional item response theory (DMIRT; Reckase2009, 1985; Reckase & McKinley, 1991) and can be used to analyze dichotomous and polytomous items (Muraki & Carlson, 1995) in a multidimensional ability space. The method is foremost visual and illustrates item characteristics, represented by vector arrows, located in a three-dimensional interactive space.
+The `D3mirt` analysis is based on descriptive multidimensional item response theory (DMIRT; Reckase, 2009, 1985; Reckase & McKinley, 1991) and can be used to analyze dichotomous and polytomous items (Muraki & Carlson, 1995) in a multidimensional ability space. The method is foremost visual and illustrates item characteristics, represented by vector arrows, located in a three-dimensional interactive space.
 
 In DMIRT analysis, also called within multidimensional modeling, it is assumed that items in a multidimensional ability space can measure single or multiple latent traits (Reckase, 2009, 1985; Reckase & McKinley, 1991). The methodology is a type of data reduction technique that uses a compensatory model (Reckase, 2009), i.e., a model that assumes the existence of a multidimensional trait space forming an interconnected latent ability field. The method is *descriptive* because the results describe the extent to which items in a test are unidimensional, i.e., that the items describe one dimension only, or are within-multidimensional, i.e., that the items describe more than one dimension.
 
@@ -227,7 +227,7 @@ To do this, the user must first extract respondent factor scores with `mirt::fsc
 f <- mirt::fscores(mod1, 
                    method="EAP", 
                    full.scores = TRUE, 
-                   full.scores.SE = F, QMC = T)
+                   full.scores.SE = FALSE, QMC = TRUE)
 ```
 
 ```{r}
@@ -293,16 +293,16 @@ If you encounter a bug, please file an issue with a minimal reproducible example
 
 Adler, D., & Murdoch, D. (2023). *Rgl: 3d Visualization Using OpenGL* [Computer software]. <https://dmurdoch.github.io/rgl/index.html>
 
-Chalmers, R., P. (2012). mirt: A Multidimensional Item Response Theory Package for the R Environment. *Journal of Statistical Software, 48*(6), 1-29.
+Chalmers, R., P. (2012). mirt: A Multidimensional Item Response Theory Package for the R Environment. *Journal of Statistical Software, 48*(6), 1-29. <https://doi.org/10.18637/jss.v048.i06>
 
 DeBell, M., Krosnick, J. A., & Lupia, A.(2010). *Methodology Report and User's Guide for the 2008--2009 ANES Panel Study*. Palo Alto, CA, and Ann Arbor, MI: Stanford University and the University of Michigan.
 
 Muraki, E., & Carlson, J. E. (1995). Full-Information Factor Analysis for Polytomous Item Responses. *Applied Psychological Measurement, 19*(1), 73--90. <https://doi.org/10.1177/014662169501900109>
 
-Reckase, M. D.(2009).*Multidimensional Item Response Theory*. Springer.
+Reckase, M. D.(2009).*Multidimensional Item Response Theory*. Springer. <https://doi.org/10.1007/978-0-387-89976-3>
 
-Reckase, M. D.(1985). The Difficulty of Test Items That Measure More Than One Ability. *Applied Psychological Measurement, 9*(4),401-412.<https://doi-org.ezp.sub.su.se/10.1177/014662168500900409>
+Reckase, M. D.(1985). The Difficulty of Test Items That Measure More Than One Ability. *Applied Psychological Measurement, 9*(4),401-412. <https://doi.org/10.1177/014662168500900409>
 
-Reckase, M. D., & McKinley, R. L. (1991). The Discriminating Power of Items That Measure More Than One Dimension. *Applied Psychological Measurement, 15*(4), 361-373. <https://doi-org.ezp.sub.su.se/10.1177/014662169101500407>
+Reckase, M. D., & McKinley, R. L. (1991). The Discriminating Power of Items That Measure More Than One Dimension. *Applied Psychological Measurement, 15*(4), 361-373. <https://doi.org/10.1177/014662169101500407>
 
-Samejima, F. (1969). Estimation of latent ability using a response pattern of graded scores. *Psychometrika 34*, 1-97.<https://doi.org/10.1007/BF03372160>
+Samejima, F. (1969). Estimation of latent ability using a response pattern of graded scores. *Psychometrika 34*, 1-97. <https://doi.org/10.1007/BF03372160>
