--- a/README.Rmd
+++ b/README.Rmd
@@ -54,10 +54,8 @@ You can install the development version of D3mirt from [GitHub](https://github.c
 
 ``` r
 # install.packages("devtools")
+# To include package vignette in the installation add: build_vignettes = TRUE
 devtools::install_github("ForsbergPyschometrics/D3mirt")
-
-# install.packages("devtools") with the package vignette (extended theoretical, examples, and instruction sections)
-devtools::install_github("ForsbergPyschometrics/D3mirt", build_vignettes = TRUE)
 ```
 
 In what follows, the `D3mirt` procedure will be described very briefly using the built-in data set "anes08_09offwaves". The data set ($N = 1046, M_{age} = 51.33, SD = 14.56, 57\%$ Female) is a subset from the American National Election Survey (ANES) from the 2008-2009 Panel Study Off Wave Questionnaires, December 2009 (DeBell, et al, 2010; <https://electionstudies.org/data-center/2008-2009-panel-study/>). All items measure moral preferences and are positively scored of Likert type, ranging from 1 = *Strongly Disagree* to 6 = *Strongly Agree*. Demographic variables include age and gender (male/female).
