--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -109,7 +109,8 @@ In the `D3mirt`package the $DDISC$ is computed for all items following the angle
 Constructs, in this context, refer to the assumption that a subset of items can measure a higher-order latent variable.
 In `D3mirt`, constructs are implemented as optional vectors whose orientation is calculated as the average direction, i.e., the average multidimensional discrimination of a subset of items in the model.
 A construct vector will, therefore, point in the direction of the maximum slope of an imaginary item response function indicated by the items chosen by the user.
-Item sets are created by the user and can be exploratory (e.g., grouping items based on model observations) or theoretical (e.g., personality theory).
+
+Item subsets for construct analysis are chosen by the user and can be exploratory (e.g., grouped based on observations) or theoretical (e.g., fixed a priori based on personality theory).
 If constructs are used, the output will include reporting of the $DDISC$ parameter that shows how well the items discriminate under the assumption that they measure one of the constructs used in the analysis.
 That is, while the $MDISC$ represents the maximum level of discrimination for the items in the model, the $DDISC$ represents the local discrimination that makes it possible to compare item discrimination in a specific direction set by the constructs.
 Constructs are visually represented with construct vector arrows scaled to an arbitrary length.
